--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,11 @@ html {
 }
 body {
     background: #fff;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
+
+
     /* Ventana Azul - color.adobe.com
     https://color.adobe.com/nl/Ventana-Azul-color-theme-2159606/*/
     color: #F2385a;
@@ -30,16 +34,21 @@ a {
 a:hover {
     color: #36B1BF;
 }
-h1, h2, h3 {
+h1, h2, h3, h4, h5, h6 {
        font-family: 'Karla', sans-serif;
+       font-family: 'Source Sans Pro', sans-serif;
+       font-family: 'Josefin Sans', sans-serif;
     /* font-family: 'Rubik', sans-serif; */
     /* font-family: 'Oswald', sans-serif; */
 
-    text-align: center;
+
     /* text-transform: uppercase; */
+/*
+    line-height: 1.1; */
 
-    line-height: 1.1;
-
+}
+h1, h2, h3 {
+    text-align: center;
 }
 h1 {
     font-size: 3rem;
@@ -53,7 +62,8 @@ h1 {
    border-bottom: 0.2rem solid #36B1BF;
 }
 h2 {
-    /* font-size: 2rem; */
+    font-size: 1.5rem;
+    font-weight: 300;
 }
 h3 {
     font-weight: 700;
@@ -63,18 +73,18 @@ h3 {
       font-size: 4rem;
     }
     h2, .h2 {
-        font-size: 3rem;
+        font-size: 2rem;
     }
 }
 
 
 /* ===========================================  title section =====================================  */
 .sticky{
-    background-color: #fff;
+    background-color: #36B1BF;;
 }
 .title-bar, .top-bar {
     background-color: #fff;
-    background-color: #4ad9d9;
+    background-color: #36B1BF;
     /* background-color:rgba(255, 255, 166, 0.45); */
     /* backgrond-uimage: linear-gradient(250deg, #ffffa6 0%, #fff 100%); */
      /* 010 Winter Neva */
@@ -87,13 +97,13 @@ h3 {
     /* background-image: linear-gradient(-225deg, #7DE2FC 0%, #B9B6E5 100%); */
 
     /* background-blend-mode: multiply; */
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     /* text-transform: uppercase; */
     padding: 0.3rem;
     z-index: 999;
 }
 .title-bar, .title-bar a {
-    color: #36B1BF;
+    color: #fff;
     font-weight: 400;
 }
 
@@ -102,36 +112,65 @@ h3 {
 
 }
 
-.logo a {
-    font-family: 'Karla', sans-serif;
+.dropdown.menu .logo a {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Raleway', sans-serif;
+
+
+    /* font-family: 'Mountains of Christmas', cursive; */
+
+    /* font-family: 'Teko', sans-serif; */
+
+    /* font-family: 'Lobster Two', cursive; */
+
+    /* font-family: 'Share Tech', sans-serif; */
+
+    /* font-family: 'Geo', sans-serif; */
+
+    /* font-family: 'Englebert', sans-serif; */
+
+
     font-weight: 700;
     font-size: 2rem;
     text-transform: lowercase;
-    line-height: 1;
+    letter-spacing: 0.01em;
+    /* line-height: 1; */
 }
 
 .dropdown.menu li {
     padding: 0 0.7rem;
 }
 .dropdown.menu a {
-    /* text-transform: uppercase; */
-    /* letter-spacing: 0.05em; */
-    line-height: 1;
+    text-transform: uppercase;
+    letter-spacing: 0.07em;
+    /* font-family: 'Karla', sans-serif; */
+    font-family: 'Josefin Sans', sans-serif;
+    /* line-height: 1; */
     padding: 0.7rem 0;
     border-bottom: 0.4rem solid transparent;
     /* vertical-align: text-bottom; */
 }
 .dropdown.menu li:first-child a {
     /* border-top: 0.15rem solid #ffffa6; */
-    margin-right: 3rem;
+    margin-right: 5rem;
+}
+.dropdown.menu li {
+    margin-right: 2rem;
 }
 .dropdown.menu a:hover{
-    border-bottom: 0.4rem solid #F2385a;
+    border-bottom: 0.2rem solid #4ad9d9;
+    color: white;
 }
-.dropdown.menu .name a {
-    border-bottom: 0.4rem solid transparent;
+.dropdown.menu a:visited {
+    color: #11393D;
+}
 
-}
+/* .dropdown.menu .name a {
+    border-bottom: 0.2rem solid transparent;
+
+} */
 .bold{
     font-weight: 600;
     /* font-style: italic; */
@@ -179,21 +218,93 @@ h3 {
       box-shadow: 0 7px 0 #000, 0 14px 0 #000;
   }
 /* end navigation */
-.intro, .service, .tagline {
+.service, .tagline {
     text-align: center;
 
 }
-.intro {
-    padding: 1rem 0;
-}
+
+.hero-container{
+    height: 61.8vh;
+    margin-top: 1.5rem;
+    }
+
+    .hero-image {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        object-position: 50% 50%;
+        max-width: none;
+    }
+
 .tagline {
+    margin-top: -7.5rem;
     padding: 1rem 0 ;
     z-index: 100;
     position: relative;
 }
-.tagline p {
-   font-weight: 700;
+.tagline h1 {
+    margin-bottom: 2rem;
+    color: #F2385a;
+    text-decoration: underline;
+    font-weight: 300;
+    line-height: 1;
 }
+.tagline h1 span {
+    color: #36B1BF;
+    color: #fff;
+    color: #4ad9d9;
+
+}
+.tagline h1 span span {
+    font-weight: 500;
+    /* color: white; */
+
+
+}
+.blue {
+    color: #36B1BF;
+}
+.tagline h2 {
+    margin-top: 3rem;
+   font-weight: 400;
+   font-size: 1.5rem;
+   color: #11393D;
+   line-height: 1.1;
+}
+.tagline h2:before,
+.tagline h2:after,
+footer h4:before,
+footer h4:after {
+    position: absolute;
+    content: "";
+    /* bottom: 0rem; */
+    /* left: 0;
+    right: 0; */
+    /* margin: 0 auto; */
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background: #4ad9d9;
+}
+.tagline h2:before,
+footer h4:before {
+    bottom: 2rem;
+    margin: -1.5rem 4rem;
+}
+.tagline h2:after,
+footer h4:after {
+    bottom: 5rem;
+    margin: 0 1rem;
+}
+footer h4:before {
+    bottom:18rem;
+    margin: -1.5rem 4rem;
+}
+footer h4:after {
+    bottom: 15rem;
+    margin: 0 1rem;
+}
+
 .service {
     background-color: #bdf271;
     padding: 1rem 0.5rem;
@@ -219,26 +330,24 @@ h3 {
         padding: 4rem 0;
     }
     .tagline {
-        padding: 1rem 0 0rem;
-        margin-top: 3rem;
+        margin-top: -6rem;
     }
+
     .tagline h1 {
         line-height: 0.9;
         margin-bottom: 2rem;
         font-size: 4rem;
     }
-    .tagline h1:after {
-        position: absolute;
-        content: "";
-        bottom: 3rem;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        width: 3rem;
-        height: 0.4rem;
-        background: #36B1BF;
-        /* background-image: linear-gradient(-220deg, #ffffa6 0%, #01a2a6 100%); */
+    .tagline h2:before {
+        bottom: 2rem;
+        margin: -2rem 2rem;
     }
+    .tagline h2:after {
+        bottom: 3rem;
+        margin: 0 1rem;
+        /* right: -10px; */
+    }
+
     .service {
         padding: 3rem 0.5rem;
     }
@@ -251,7 +360,7 @@ h3 {
     transition: all 0.5s ease;
     /* transition-delay: 0.5s; */
 }
-
+/*
 .bottom-content-section {
     text-align: center;
     padding: 1rem;
@@ -261,7 +370,7 @@ h3 {
     height: 3.75rem;
     width: 3.75rem;
     fill: #fefefe;
-}
+} */
 .button {
     background-color: #f5a503;
 }
@@ -270,174 +379,14 @@ h3 {
 }
 
 
-  /* clean hero slider */
-
-.clean-hero-slider .orbit-caption {
-    width: auto;
-    height: auto;
-    background: rgba(0, 0, 0, 0.35);
-    position: absolute;
-    text-align: center;
-    right: 0;
-    left: 0;
-    padding: 0.2rem 2rem;
-  }
-  .clean-hero-slider .orbit-caption h2 {
-    font-size: 2rem;
-    color: #fff;
-}
-
-  @media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-caption {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.2);
-      text-align: center;
-      width: 50%;
-      /* right: 0; */
-      padding: 1rem 2rem;
-    }
-
-    .clean-hero-slider .orbit-caption h2 {
-        font-size: 4.5rem;
-        /* color: #bdf271; */
-    }
-  }
-
-  @media screen and (min-width: 75em) {
-    .clean-hero-slider .orbit-caption {
-      /* padding-right: 10%; */
-    }
-  }
-
-  @media screen and (min-width: 90em) {
-    .clean-hero-slider .orbit-caption {
-      /* padding-right: 20%; */
-    }
-  }
-
-  .clean-hero-slider .orbit-caption p {
-    font-size: 0.9rem;
-    line-height: 1.25;
-  }
-
-  @media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-caption p {
-      font-size: 1.1rem;
-    }
-  }
-
-  .clean-hero-slider .orbit-caption h3   {
-    color: #f5a503;
-    font-size: 1.5rem;
-    font-weight: 900;
-    margin-bottom: 0;
-  }
 
 
-  @media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-caption h3 {
-      font-size: 2.5rem;
-      /* font-weight: normal; */
-    }
-  }
-
-  .clean-hero-slider .orbit-slide {
-    /* padding-bottom: 40%; */
-    background: #0a0a0a;
-  }
-
-  @media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-slide {
-      padding-bottom: 0;
-    }
-  }
-
-  .clean-hero-slider .orbit-controls button {
-    background: #f5a503;
-    padding: 1rem 0.5rem;
-  }
-
-  .clean-hero-slider .orbit-controls button:hover {
-    background: #fefefe;
-    color: #0a0a0a;
-  }
-
-  @media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-controls .orbit-previous {
-      left: auto;
-      right: 2.4rem;
-    }
-  }
-
-  @media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-controls .orbit-next {
-      right: 0.5rem;
-    }
-  }
-
-.clean-hero-slider .orbit-bullets {
-display: none;
-}
-
-.clean-hero-slider .orbit-bullets button {
-width: 3rem;
-height: 0.4rem;
-border-radius: 0;
-background-color: #fefefe;
-}
-
-.clean-hero-slider .orbit-bullets button.is-active {
-background-color: #F2385a;
-}
-
-.clean-hero-slider ul.orbit-container {
-height: 61.8vh;
-}
-
-.clean-hero-slider li.orbit-slide {
-height: 100% !important;
-}
-
-.orbit-figure {
-    height: 100%;
-}
-.orbit-image {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    object-position: 50% 50%;
-    max-width: none;
-}
-
-@media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-bullets {
-      display: block;
-      margin-bottom: 0;
-      margin-top: -3rem;
-      background: none;
-    }
-     /* added */
-  .orbit-container {
-    margin: 0;
-    }
-    .clean-hero-slider ul.orbit-container {
-        height: 61.8vh;
-        /* height: 77vh; */
-    }
-}
-
-  /* end clean hero slider */
 
 
   /* masonry type grid layout */
 .portfolio {
     margin-top: 3rem;
-    background-color: #11393D;
+    background-color: #17244C;
 
 }
 
@@ -447,6 +396,392 @@ height: 100% !important;
     -webkit-column-gap: 0rem;
             column-gap: 0rem;
   }
+  .masonry-css-item {
+    -webkit-column-break-inside: avoid;
+            break-inside: avoid;
+    margin-bottom: 0rem;
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    padding:0 0 1rem 0;
+  }
+
+  .masonry-css-item .inner {
+
+    position: absolute;
+    padding: 20px 25px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    color: #f5a503;
+    background-color: #1D1D1B;
+    width: 100%;
+    opacity: 0;
+    transition: 400ms;
+    text-align: center;
+}
+.masonry-css-item:hover .inner {
+    opacity: 1;
+
+}
+.masonry-css-item .inner .helper {
+        height: 100%;
+        display: inline-block;
+        vertical-align: middle;
+        white-space: nowrap;
+}
+.masonry-css-item .inner .info {
+    display: inline-block;
+max-width: 95%;
+max-height: 100%;
+width: auto;
+height: auto;
+vertical-align: middle;
+text-align: center;
+}
+
+/* vervolgpagina */
+.project{
+    margin-top: 2rem;
+    padding-bottom: 1rem;
+}
+.project .tekst {
+    text-align: center;
+    color: #17244C;
+    margin-top: 1rem;
+}
+
+.project-controls {
+    text-align: center;
+}
+a.next-project, a.previous-project, a.close-project {
+    display: block;
+    padding: 1rem;
+    text-align: center;
+    margin: 1.5rem 0 0 0;
+    max-width: 15rem;
+    width: 70%;
+
+    letter-spacing: 0.2rem;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    display: inline-block;
+
+}
+
+
+
+@media screen and (min-width: 40em) {
+    .toepassing {
+        background-color: rgb(57, 36, 158);
+        position: fixed;
+        display: block;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        z-index: 99999;
+    }
+    .toepassing ul {
+        margin: 0.5rem auto 0;
+        text-align: center;
+    }
+    .project {
+        margin-top: 4rem;
+        padding-bottom: 3rem;
+    }
+    .image-container {
+        height: 61.8vh;
+    }
+    .image-container img {
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+        max-height:61.8vh;
+        /* border: 0.8rem solid white; */
+        /* width: auto;
+        height: auto;
+        vertical-align: middle;
+        margin-left: -5px; */
+    }
+    .image-controls {
+        margin: 1rem 0 0;
+        text-align: center;
+    }
+    .image-controls ul {
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+    }
+    .image-controls ul li {
+        text-indent: -100000px;
+        float: left;
+        margin-right: 1.5rem;
+        list-style: none;
+    }
+    .image-controls ul li a {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 0.5rem;
+        background-color: #fff;
+        opacity: 0.5;
+    }
+    .image-controls ul li a.selected,
+    .image-controls ul li a:hover {
+        opacity: 1;
+    }
+
+    .project .tekst {
+        text-align: center;
+        color: #fff;
+    }
+    a.previous-project,
+    a.next-project,
+    a.close-project {
+        position: absolute;
+    }
+    a.button.next-project,
+    a.button.previous-project {
+        border: 0.15rem solid #f5a503;
+        background: transparent;
+    }
+    a.button.next-example {
+        display: inline-block;
+        margin: 0 auto;
+        letter-spacing: 0.2rem;
+        text-transform: uppercase;
+        text-align: center;
+        color: #fff;
+        background: rgba(255,255,255, 0.5);
+
+    }
+    a.previous-project {
+        left: 6px;
+        bottom: 15px;
+        z-index: 98;
+        /* background: url("../img/ui.png") -106px 0px no-repeat; */
+    }
+    a.next-project {
+        right: 7px;
+        bottom: 15px;
+        z-index: 98;
+        /* background: url("../img/ui.png") -159px 0px no-repeat; */
+    }
+    a.close-project {
+        width: 3rem;
+        height: 3rem;
+       color: #fff;
+        right: 1rem;
+        top: 1rem;
+        z-index: 98;
+        background: url("../img/ui.png") -53px 0px no-repeat;
+
+        -webkit-transition: none;
+        -moz-transition: none;
+        -o-transition: none;
+        transition: none;
+        padding: none;
+        margin: 0;
+
+        border: none;
+        text-indent: -100000px;
+
+        /* width: 50px;
+        height: 50px; */
+    }
+}
+
+
+
+/* oorspronkelijke code */
+#project_loader, #project_loader_before, #project_loader_after {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 99999;
+}
+#project {
+    margin-top: 80px;
+    padding-bottom: 50px;
+}
+#project .project_title {
+
+    position: relative;
+    width: 100%;
+    text-align: center;
+}
+.project_media_container {
+    width: 100%;
+}
+.media_pager {
+    /* display: none; */
+    position: fixed;
+    bottom: 25px;
+    z-index: 98;
+    width: 100%;
+    text-align: center;
+}
+.project_controls {
+    margin: 0 15px;
+}
+a.next_project, a.previous_project, a.close_project, a.previous_media, a.next_media, a.show_project_info {
+
+    display: block;
+    padding: 15px;
+    text-align: center;
+    padding: 6px 10px 4px 12px;
+    margin: 20px 0 0 0;
+    max-width: 360px;
+    width: 100%;
+    -webkit-transition: background 0.4s ease;
+    -moz-transition: background 0.4s ease;
+    -o-transition: background 0.4s ease;
+    transition: background 0.4s ease;
+    background-color: #fff;
+    border: #1D1D1B 2px solid;
+    outline: none;
+    moz-outline: none;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #1D1D1B;
+    display: inline-block;
+
+}
+
+@media screen and (min-width: 40em) {
+    #project .project_title {
+
+        width: auto;
+        text-align: center;
+        position: absolute;
+        top: 15px;
+        width: 100%;
+        padding-bottom: 0;
+        z-index: 97;
+
+    }
+    .project_media_container {
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 25px 25px 25px 25px;
+        z-index: 1;
+        text-align: center;
+    }
+    #project .project_description {
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        z-index: 99;
+    }
+    .project_media_container .inner {
+        display: block;
+        margin: auto;
+        position: relative;
+        top: 0;
+        padding-top: 100px;
+        padding-bottom: 65px;
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        white-space: nowrap;
+    }
+    .project_media_container img {
+        display: inline-block;
+        margin: auto;
+            margin-left: auto;
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        vertical-align: middle;
+        margin-left: -5px;
+    }
+    .media_pager {
+        display: block;
+    }
+    .media_pager ul {
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+    }
+    .media_pager ul li {
+        text-indent: -100000px;
+        float: left;
+        margin-right: 15px;
+        list-style: none;
+    }
+    .media_pager ul li a {
+        display: block;
+        width: 14px;
+        height: 14px;
+        border-radius: 7px;
+        background-color: #fff;
+        opacity: 0.5;
+    }
+    .media_pager ul li a.selected,
+    .media_pager ul li a:hover {
+        opacity: 1;
+    }
+    .project_controls {
+        /* position: relative; */
+        margin: 0;
+    }
+    a.next_project, a.previous_project, a.close_project, a.previous_media, a.next_media, a.show_project_info {
+
+        -webkit-transition: none;
+        -moz-transition: none;
+        -o-transition: none;
+        transition: none;
+        padding: none;
+        margin: 0;
+        color: #fff;
+        position: absolute;
+        border: none;
+        text-indent: -100000px;
+        display: block;
+        width: 50px;
+        height: 50px;
+
+    }
+    a.previous_project {
+        left: 6px;
+        bottom: 15px;
+        z-index: 98;
+        background: url("../img/ui.png") -106px 0px no-repeat;
+    }
+    a.next_project {
+        right: 7px;
+        bottom: 15px;
+        z-index: 98;
+        background: url("../img/ui.png") -159px 0px no-repeat;
+    }
+    a.close_project {
+        display: block;
+        right: 10px;
+        top: 15px;
+        z-index: 98;
+        background: url("../img/ui.png") -53px 0px no-repeat;
+    }
+}
+/* eind oorspronkelijke code */
+
 
   @media screen and (min-width: 25em) {
     .masonry-css {
@@ -460,6 +795,12 @@ height: 100% !important;
       -webkit-column-count:2;
               column-count: 2;
     }
+    .masonry-css-item {
+
+        padding: 1rem;
+      }
+
+
   }
 
   @media screen and (min-width: 50em) {
@@ -476,12 +817,6 @@ height: 100% !important;
     }
   } */
 
-  .masonry-css-item {
-    -webkit-column-break-inside: avoid;
-            break-inside: avoid;
-    margin-bottom: 0rem;
-    padding: 1rem;
-  }
 
 
 
@@ -495,7 +830,9 @@ footer > div {
 footer i {
     color: white;
 }
-
+.footer-column {
+    position: relative;
+}
 .marketing-site-footer {
     background: #36B1BF;
     color: #white;
